placeholder kuvat kuumailmapallon sijaan

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 
   <picture>
         <source media="(max-width: 400px)"
-            srcset="images/kavelija_400.jpg">
+            srcset="images/placeholder_400.png">
     <source media="(max-width: 768px)"
-            srcset="images/kavelija_768.jpg">
+            srcset="images/placeholder_768.png">
     <source media="(min-width: 770px)"
-            srcset="images/kavelija_1280.jpg">
+            srcset="images/placeholder_1280.png">
             <img style="width:100%;" src="images/kavelija_1280.jpg"> 
   </picture>
 
