--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@ laillistettu psykologi ja psykoterapeuttiopiskelija</p> -->
       <div class="value-props row">
         <div class="four columns value-prop">
           <img class="value-img" src="icons/cloud-rain.svg">
-          Meren aaltoset ajoivat.
+          Tämmöisiä ikoneja jos, tarvis...
         </div>
         <div class="four columns value-prop">
           <img class="value-img" src="icons/cloud.svg">          
-        Virttä toista tuulet toivat, meren aaltoset ajoivat.
+          Tämmöisiä ikoneja jos, tarvis...
         </div>
         <div class="four columns value-prop">
           <img class="value-img" src="icons/sun.svg">
-          Vilu mulle virttä virkkoi
+          Tämmöisiä ikoneja jos, tarvis...
         </div>
       </div>
 
@@ -117,7 +117,7 @@ laillistettu psykologi ja psykoterapeuttiopiskelija</p> -->
       <div class="one-half column">
 
 <p>
-Flunssaan tai murtuneeseen jalkaan haemme apua lääkäriltä. Liikunnalla pidämme huolta fyysisestä kehostamme.
+  Liikunnalla pidämme fyysisen kehomme kunnossa. Murtuneeseen jalkaan puolestaan haemme apua lääkäriltä. 
 </p>
 
 <p>
@@ -126,19 +126,17 @@ surettaa, pelottaa, ärsyttää tai suunta on kateissa?
 </p>
 
 <p>
-Entä jos elämäntilanne luhistaa, ihmissuhteet vievät yöunet, työelämä tuntuu taakalta, stressi painaa, tulevaisuus on kuin musta aukko, sosiaaliset tilanteet saavat jumiin, korkeat paikat kammottavat, hämähäkit hirvittävät tai missään ei tunnu olevan mitään järkeä?
+Entä jos elämäntilanne luhistaa, stressi painaa, ihmissuhteet vievät yöunet, työelämä tuntuu taakalta, tulevaisuus on kuin musta aukko, sosiaaliset tilanteet saavat jumiin, tai missään ei tunnu olevan mitään järkeä?
 </p>
 
 <p>
-Erilaiset mielen taakat ja sisäiset solmut vaativat testattuja täsmätyökaluja sekä yksilöllistä huomiota. 
+  Erilaisiin mielen painolasteihin ja sisäisiin solmuihin auttavat tehokkaiksi todetut terapiatyökalut sekä yksilöllinen huomio. 
 </p>
 
 <p>
 Olipa ongelmasi suuri tai pieni, otan sen aina vakavasti ja pureudumme siihen yhdessä pintaa syvemmälle. Harjoitamme niitä mielen lihaksia ja taitoja, jotka antavat konkreettisia keinoja tilanteen helpottamiseksi.
 </p>
 
-<p>
-Lopputuloksena on helpompi olo ja kirkkaampi suunta. 
 </p>
 
 <h3>
@@ -159,63 +157,61 @@ Lopputuloksena on helpompi olo ja kirkkaampi suunta.
 </p>
 
 <p>
-  Ensimmäinen askel terapiassa on kartoittaa mistä olet tulossa ja minne menossa. Joskus yksin tämä voi riittää uuteen oivallukseen.
+  Ensimmäinen askel terapiassa on kartoittaa mistä olet tulossa ja minne menossa. Joskus pelkästään tämä voi riittää uuteen oivallukseen.
 </p>
 
 <p>
-  Yleensä kartoitus on kuitenkin lähtölaukaus prosessille, jossa tapaamisia voi olla tarpeen ja sopimuksen mukaan muutamasta useisiin kymmeniin kertoihin. Tapaamisissa otamme keskustellen, kuunnellen ja tehtäviä tehden yhden pienen askeleen kerrallaan kohti parempaa elämänlaatua.
+  Yleensä kartoitus on lähtölaukaus prosessille, jossa tapaamisia on muutamasta useisiin kymmeniin kertoihin. Tapaamisissa otamme keskustellen, kuunnellen ja tehtäviä tehden yhden pienen askeleen kerrallaan kohti parempaa elämänlaatua.
 </p>
 
 <p>
-  Terapiatyöni keskiössä on luottamus. Ei ole niin pimeää luolaa tai toivotonta sisäistä maisemaa, josta ei voisi ottaa pientä askelta kohti parempaa. Positiivinen muutos on aina mahdollista. Apua saa kun sitä uskaltaa pyytää. 
+  Terapiatyöni ytimessä on luottamus parempaan. Ei ole niin pimeää luolaa tai toivotonta sisäistä maisemaa, josta ei voisi ottaa pientä askelta kohti parempaa. Positiivinen muutos on aina mahdollista. 
 </p>
 
 <p>
-Olennaista on pyytää apua mahdollisimman varhain – jo paljon ennen kuin hauraasta tai painavasta olosta tulee arkipäivää. Askeleet, joista tulevaisuudessa kiität itseäsi otetaan tässä ja nyt. 
-</p>
+  Olennaista on kääntyä läheisten ihmisten, omien toimiviksi todettujen keinojen tai ammattiavun puoleen mahdollisimman varhain – jo paljon ennen kuin hauraasta tai painavasta olosta tulee arkipäivää. Et ole heikko, viallinen tai epäonnistunut, vaikka tarvitset apua. On suurinta viisautta hoitaa itseään silloin, kun siihen on vielä voimavaroja.</p>
 
 <p>
-  Askeleet joista tulevaisuudessa kiität itseäsi otetaan nyt. 
+  Askeleet joista tulevaisuudessa kiität itseäsi otetaan tässä ja nyt. 
 </p>
 
 <p><strong>Erityisosaamistani terapeuttina ovat:</strong></p>
 
 <li>Vaikeat elämäntilanteet</li>
-<li>Pelot ja ahdistuneisuus</li>
 <li>Toive elämänmuutoksesta</li>
-<li>Paniikki- ja mielialaoireet</li>
+<li>Pelot ja ahdistuneisuus</li>
+<li>Masentuneisuus ja uupumus</li>
 <li>Vanhemmuuden haasteet</li>
-<li>Lapsen kasvuun liittyvät ongelmat
+<li>Lapsen kasvuun liittyvät ongelmat</li>
 </li>
 
-<p><strong>Ota yhteyttä ja keskustellaan lisää tarpeistasi</strong><p>
+Lue lisää <a href="https://www.mielenterveystalo.fi/aikuiset/Tietopankki/Hoitomuotoja/Pages/Psykoterapia.aspx">psykoterapiasta</a> ja <a href="https://minduu.fi/fi/psykoterapian-abc/psykoterapiasuuntaukset/kognitiivinen-kayttaytymisterapia/">kognitiivisesta käyttäytymisterapiasta</a>.
+
+<p><strong>Ota yhteyttä ja keskustellaan lisää.</strong><p>
 
 <a class="button button-primary" href="mailto:aino.renvall@protonmail.com?subject=Yhteydenotto verkkosivuilta">Lähetä sähköpostia</a>
 
 <h3>
   <a class = "anchor" id="aino"></a>
-  Aino
+  Esittely
 </h3>
 
 
 
-<p>
-  Olen laillistettu psykologi ja psykoterapeuttiopiskelija, jonka intohimo jo pienestä pitäen on ollut ymmärtää ihmismieltä ja auttaa ihmisiä elämään onnellisemmin.  
-</p>
+<p><strong>Testattuja työkaluja suuriin ja pieniin haasteisiin 
+</strong> </p>
 
 <div class="img-text-container">
   <img class="u-max-full-width" src="images/omakuva.jpg">
-  <div class="centered">Aino Renvall
-Psykologian maisteri,
-laillistettu psykologi ja psykoterapeuttiopiskelija</div>
+  <div class="centered">
+</div>
 </div>
 
 <p>
-  Valmistuttuani psykologian maisteriksi työskentelin yli vuosikymmenen ajan eri tehtävissä julkisen terveydenhuollon palveluissa, yksityisellä sektorilla sekä säätiössä. Parhaillaan opiskelen kognitiivisen käyttäytymisterapian psykoterapeutiksi. Valmistun vuonna 2022. 
-</p>
+  Psykologina ja terapeuttina olen loputtoman kiinnostunut ihmismielestä ja sen haavoittuvuuksista, mutta ennen kaikkea mielen joustavuudesta.</p>
 
 <p> 
-  Työskentelen aikuisten, nuorten ja lasten kanssa. Erityisosaamistani on ahdistuneisuuden, pelkojen ja elämänkriisien hoito, sekä neuropsykiatristen pulmien arviointi ja kuntoutus. Minulla on pitkä tausta lasten ja perheiden psykologina, joten voin olla apuna myös, mikäli kaipaat vanhempana tukea tai sinulla on huolia lapsesi kehitykseen tai hyvinvointiin liittyen.
+  Meillä ihmisillä on valtava kyky mukautua, selviytyä ja kasvaa. Työlläni haluan luoda toivoa parempaan sekä tarjota muutoksen mahdollistavia konkreettisia työkaluja. 
 </p>
 
 <!-- <i>Jos haluaa
@@ -223,12 +219,28 @@ lyhentää, niin nämä kaksi kappaletta voi jättää pois. Kuvaavat
 kyllä prosessia, mutta eivät ole mielestäni välttämättömiä.</i> -->
 
 <p>
-  Tavoitteiden saavuttaminen palkitsee, myös terapiassa. Samalla matka niitä kohti usein haastaa. Vastaavasti kuin vaikkapa maratonjuoksu kannustaa kohtaamaan totutut rajat ja sietämään epämukavuutta, myös terapiassa teho ja palkitsevuus perustuu sopivaan annokseen kitkaa, jota ajatusten uudelleen ohjelmoiminen väistämättä luo.
+  Valmistuttuani psykologian maisteriksi olen työskennellyt yli vuosikymmenen ajan eri tehtävissä julkisen terveydenhuollon palveluissa, yksityisellä sektorilla sekä säätiössä. Olen toiminut muun muassa perusterveydenhuollon, erikoissairaanhoidon, vauva- ja  lapsiperheiden sekä työikäisten kuntoutuksen asiantuntijatehtävissä.
 </p>
 
 <p>
-  Virtaavan veden voima konkretisoituu vasta kun se padotaan. Myös mielen voima ja mahdollisuutemme tulevat näkyväksi vasta tunnistamalla ne sisäiset esteet, jotka ovat vapaan virtauksen tiellä.
+  Terapiatyön ohella jatkan edelleen työskentelyä perusterveydenhuollossa pienten lasten kuntoutuspalvelussa. Opiskelen parhaillaan kognitiivisen käyttäytymisterapian psykoterapeutiksi ja valmistun vuonna 2022. 
 </p> 
+
+<p>Psykologina ja terapeuttina olen saanut olla osana satojen ihmisten elämän suuria ja pieniä haasteita. Ongelmien helpottuminen, ajatusten asettuminen uusiin uomiin sekä suunnan kirkastuminen ovat yhä uudelleen palkitsevia ja kiitolliseksi tekeviä hetkiä.
+</p>
+
+<p>Terapian onnistumisessa ensimmäinen peruspilarini on luottamuksellisen, hyväksyvän ja rauhallisen keskusteluilmapiirin luominen. Ilman sitä ymmärrys tilanteesta, muutostoiveista sekä keinoista jää väistämättä puolitiehen. 
+</p>
+
+<p>Hedelmällisen ilmapiirin ja vuorovaikutuksen luomisen lisäksi olennainen osa työtäni on tieteellisesti tutkittujen menetelmien käyttäminen. Valitsen työkalut yhdessä asiakkaan kanssa aina tapauskohtaisesti, yksilöllisesti ja huolella. Käytän usein myös soveltuvia rentoutus- tai mindfulness-harjoituksia. 
+</p>
+
+<p>Olen vilpittömän intohimoinen ymmärtämään yksilöllisen kokemuksesi ja tarttumaan yhdessä toimeen sen helpottamiseksi. 
+</p>
+
+
+<a href="">Koulutus ja ammatillinen lisäkoulutus</a>
+
 
 <h3>
   <a class = "anchor" id="hinnat"></a>
