--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ kyllä prosessia, mutta eivät ole mielestäni välttämättömiä.</i> -->
 </p>
 
 
-<a href="">Koulutus ja ammatillinen lisäkoulutus</a>
+<a href="tiedostot/cv_ainorenvall.pdf">Koulutus ja ammatillinen lisäkoulutus</a>
 
 
 <h3>
