--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@ Olipa ongelmasi suuri tai pieni, otan sen aina vakavasti ja pureudumme siihen yh
 <li>Lapsen kasvuun liittyvät ongelmat</li>
 </li>
 
-Lue lisää <a href="https://www.mielenterveystalo.fi/aikuiset/Tietopankki/Hoitomuotoja/Pages/Psykoterapia.aspx">psykoterapiasta</a> ja <a href="https://minduu.fi/fi/psykoterapian-abc/psykoterapiasuuntaukset/kognitiivinen-kayttaytymisterapia/">kognitiivisesta käyttäytymisterapiasta</a>.
+<p>Lue lisää <a href="https://www.mielenterveystalo.fi/aikuiset/Tietopankki/Hoitomuotoja/Pages/Psykoterapia.aspx">psykoterapiasta</a> ja <a href="https://minduu.fi/fi/psykoterapian-abc/psykoterapiasuuntaukset/kognitiivinen-kayttaytymisterapia/">kognitiivisesta käyttäytymisterapiasta</a>.</p>
+
+
 
 <p><strong>Ota yhteyttä ja keskustellaan lisää.</strong><p>
 
