teksti full leveys

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@ laillistettu psykologi ja psykoterapeuttiopiskelija</p> -->
         </div>
       </div>
 
-      </div>
+      <!--/div>
       </div>
 
 
       
      <div class="row">
-      <div class="one-half column">
+      <div class="one-half column"-->
 
 <p>
   Liikunnalla pidämme fyysisen kehomme kunnossa. Murtuneeseen jalkaan puolestaan haemme apua lääkäriltä. 
