muutokset ja kuvat

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <source media="(max-width: 768px)"
             srcset="images/placeholder_768.png">
     <source media="(min-width: 770px)"
-            srcset="images/placeholder_1280.png">
+            srcset="images/metsa_1280.jpg">
             <img style="width:100%;" src="images/kavelija_1280.jpg"> 
   </picture>
 
@@ -108,20 +108,17 @@ laillistettu psykologi ja psykoterapeuttiopiskelija</p> -->
         </div>
       </div>
 
-      </div>
+      <!--/div>
       </div>
 
 
       
      <div class="row">
-      <div class="one-half column">
+      <div class="one-half column"-->
 
 <p>
   Liikunnalla pidämme fyysisen kehomme kunnossa. Murtuneeseen jalkaan puolestaan haemme apua lääkäriltä. 
-</p>
-
-<p>
-Mutta mitä tehdä jos ahdistaa,
+</p>Mutta mitä tehdä jos ahdistaa,
 surettaa, pelottaa, ärsyttää tai suunta on kateissa?
 </p>
 
