hautajaiskuva vastavaloon ja asettelun protoja

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@300;400;600&family=Montserrat:ital,wght@0,400;1,300&family=Raleway:wght@400;500;600&display=swap" rel="stylesheet">
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <!--link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"-->
 
+<link href="https://fonts.googleapis.com/css2?family=B612:ital,wght@0,400;0,700;1,400;1,700&family=PT+Mono&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -53,9 +54,9 @@
       <li>
         <a href="#aino" class="nav-links">Aino</a>
       </li>
-      <li>
+      <!-- <li>
         <a href="#hinnat" class="nav-links">Hinnat</a>
-      </li>
+      </li> -->
             <li>
         <a href="#yhteystiedot" class="nav-links">Yhteystiedot</a>
       </li>
@@ -68,12 +69,12 @@
 
   <picture>
         <source media="(max-width: 400px)"
-            srcset="images/placeholder_400.png">
+            srcset="images/vastavalo_400.jpeg">
     <source media="(max-width: 768px)"
-            srcset="images/placeholder_768.png">
+            srcset="images/vastavalo_768.jpeg">
     <source media="(min-width: 770px)"
-            srcset="images/metsa_1280.jpg">
-            <img style="width:100%;" src="images/kavelija_1280.jpg"> 
+            srcset="images/vastavalo_1280.jpeg">
+            <img style="width:100%;" src="images/vastavalo_1280.jpeg"> 
   </picture>
 
           <div class="text-header">
@@ -93,20 +94,7 @@
 Psykologian maisteri,
 laillistettu psykologi ja psykoterapeuttiopiskelija</p> -->
 
-      <div class="value-props row">
-        <div class="four columns value-prop">
-          <img class="value-img" src="icons/cloud-rain.svg">
-          Tämmöisiä ikoneja jos, tarvis...
-        </div>
-        <div class="four columns value-prop">
-          <img class="value-img" src="icons/cloud.svg">          
-          Tämmöisiä ikoneja jos, tarvis...
-        </div>
-        <div class="four columns value-prop">
-          <img class="value-img" src="icons/sun.svg">
-          Tämmöisiä ikoneja jos, tarvis...
-        </div>
-      </div>
+
 
       <!--/div>
       </div>
@@ -117,8 +105,7 @@ laillistettu psykologi ja psykoterapeuttiopiskelija</p> -->
       <div class="one-half column"-->
 
 <p>
-  Liikunnalla pidämme fyysisen kehomme kunnossa. Murtuneeseen jalkaan puolestaan haemme apua lääkäriltä. 
-</p>Mutta mitä tehdä jos ahdistaa,
+Liikunnalla pidämme fyysisen kehomme kunnossa. Murtuneeseen jalkaan puolestaan haemme apua lääkäriltä. Mutta mitä tehdä jos ahdistaa,
 surettaa, pelottaa, ärsyttää tai suunta on kateissa?
 </p>
 
@@ -136,14 +123,31 @@ Olipa ongelmasi suuri tai pieni, otan sen aina vakavasti ja pureudumme siihen yh
 
 </p>
 
-<h3>
-  <a class = "anchor" id="psykoterapia"></a>
-  Psykoterapia
-</h3>
 
-<blockquote>
-  Mistä haluat kiittää itseäsi tulevaisuudessa?
-</blockquote>
+
+</div>
+</div>
+</div>
+
+
+<div class="row">
+  <div class="12 column category">
+    <div class="img-text-container">
+                <div class="box-container">
+    <div class="text-header">Mistä haluat kiittää itseäsi tulevaisuudessa?</div>
+                </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+<div class="row">
+  <div class="twelve columns">
+
+    <h3>
+      <a class = "anchor" id="psykoterapia"></a>
+      Psykoterapia
+    </h3>
 
 <p>
   Kaikki tiedämme miltä tuntuvat tukalat elämäntilanteet, suuret muutokset sekä hetket jolloin mieli tuntuu olevan rikki, väsynyt tai hukassa.
@@ -174,13 +178,47 @@ Olipa ongelmasi suuri tai pieni, otan sen aina vakavasti ja pureudumme siihen yh
 
 <p><strong>Erityisosaamistani terapeuttina ovat:</strong></p>
 
-<li>Vaikeat elämäntilanteet</li>
+
+<div class="value-props row">
+  <div class="four columns value-prop">
+    <img class="value-img" src="icons/cloud-rain.svg">
+    <div class = "speciality">Vaikeat elämäntilanteet</div>
+  </div>
+  <div class="four columns value-prop">
+    <img class="value-img" src="icons/compass.svg">          
+    <div class = "speciality">Toive elämänmuutoksesta</div>
+  </div>
+  <div class="four columns value-prop">
+    <img class="value-img" src="icons/cloud-storm.svg">
+    <div class = "speciality">Pelot ja ahdistuneisuus</div>
+  </div>
+</div>
+
+
+<div class="value-props row">
+  <div class="four columns value-prop">
+    <img class="value-img" src="icons/mood-sad.svg">
+    <div class = "speciality">Masentuneisuus ja uupumus</div>
+  </div>
+  <div class="four columns value-prop">
+    <img class="value-img" src="icons/battery-1.svg">          
+    <div class = "speciality">Vanhemmuuden haasteet</div>
+  </div>
+  <div class="four columns value-prop">
+    <img class="value-img" src="icons/heart.svg">
+    <div class = "speciality">Lapsen kasvuun liittyvät ongelmat</div>
+  </div>
+</div>
+
+
+
+<!-- <li>Vaikeat elämäntilanteet</li>
 <li>Toive elämänmuutoksesta</li>
 <li>Pelot ja ahdistuneisuus</li>
 <li>Masentuneisuus ja uupumus</li>
 <li>Vanhemmuuden haasteet</li>
 <li>Lapsen kasvuun liittyvät ongelmat</li>
-</li>
+</li> -->
 
 <p>Lue lisää <a href="https://www.mielenterveystalo.fi/aikuiset/Tietopankki/Hoitomuotoja/Pages/Psykoterapia.aspx">psykoterapiasta</a> ja <a href="https://minduu.fi/fi/psykoterapian-abc/psykoterapiasuuntaukset/kognitiivinen-kayttaytymisterapia/">kognitiivisesta käyttäytymisterapiasta</a>.</p>
 
@@ -200,11 +238,11 @@ Olipa ongelmasi suuri tai pieni, otan sen aina vakavasti ja pureudumme siihen yh
 <p><strong>Testattuja työkaluja suuriin ja pieniin haasteisiin 
 </strong> </p>
 
-<div class="img-text-container">
+<!-- <div class="img-text-container">
   <img class="u-max-full-width" src="images/omakuva.jpg">
   <div class="centered">
 </div>
-</div>
+</div> -->
 
 <p>
   Psykologina ja terapeuttina olen loputtoman kiinnostunut ihmismielestä ja sen haavoittuvuuksista, mutta ennen kaikkea mielen joustavuudesta.</p>
@@ -241,13 +279,13 @@ kyllä prosessia, mutta eivät ole mielestäni välttämättömiä.</i> -->
 <a href="tiedostot/cv_ainorenvall.pdf">Koulutus ja ammatillinen lisäkoulutus</a>
 
 
-<h3>
+<!-- <h3>
   <a class = "anchor" id="hinnat"></a>
 Hinnat
-</h3>
+</h3> -->
 
 
-<table class = "u-full-width">
+<!-- <table class = "u-full-width">
   <thead>
     <tr>
       <th>Lippusarjat</th>
@@ -290,7 +328,7 @@ Hinnat
       <td>68 €</td>
     </tr>
   </tbody>
-</table>
+</table> -->
 
 
 
@@ -302,7 +340,12 @@ Hinnat
 Yhteystiedot
 </h3>
 
+<h4>Vastaanotto</h4>
 
+<li>Kotisivu: <a href="http://www.kktkeskusarvo.fi/">KKT-keskus ARVO</a> </li>
+<li>Linkki Google Mapsiin: <a href="https://www.google.fi/maps/place/KKT-keskus+Arvo/@60.1807942,24.9507564,17z/data=!3m1!4b1!4m5!3m4!1s0x46920bcab560a50f:0xa61af00c404d103a!8m2!3d60.1807942!4d24.9529451?hl=fi">Hämeentie 3, 00250 Helsinki</a></li>
+
+<!-- 
 <h4>Yhteydenottolomake</h4>
 
 <form>
@@ -327,12 +370,7 @@ Yhteystiedot
     <span class="label-body">Lähetä kopio itsellesi</span>
   </label>
   <input class="button-primary" type="submit" value="Lähetä">
-</form>
-
-<h4>Vastaanotto</h4>
-
-<li>Kotisivu: <a href="http://www.kktkeskusarvo.fi/">KKT-keskus ARVO</a> </li>
-<li>Linkki Google Mapsiin: <a href="https://www.google.fi/maps/place/KKT-keskus+Arvo/@60.1807942,24.9507564,17z/data=!3m1!4b1!4m5!3m4!1s0x46920bcab560a50f:0xa61af00c404d103a!8m2!3d60.1807942!4d24.9529451?hl=fi">Hämeentie 3, 00250 Helsinki</a></li>
+</form> -->
 
 
 
@@ -340,25 +378,24 @@ Yhteystiedot
 
 
 
-<h4>Bokseja</h4>
 
-      <div class="row">
+
+<!-- <h4>Bokseja</h4> -->
+
+      <!-- <div class="row">
         <div class="one-third column category">
                     <div class="img-text-container">
           <img class="u-max-full-width" src="images/lokit.jpg">
-<!--           <div class="centered">Virttä toista tuulet toivat, meren aaltoset ajoivat.</div> -->
           </div>
         </div>
         <div class="one-third column category">
           <div class="img-text-container">
           <img class="u-max-full-width" src="images/maissipelto.jpg">
-<!--           <div class="centered">Vilu mulle virttä virkkoi, sae saatteli runoja. </div> -->
           </div>
         </div>
         <div class="one-third column category">
           <div class="img-text-container">
           <img class="u-max-full-width" src="images/kirkko.jpg">
-<!--           <div class="centered">Vilu mulle virttä virkkoi, sae saatteli runoja. </div> -->
           </div>
         </div>
       </div>
@@ -373,16 +410,12 @@ Yhteystiedot
         </div>
         <div class="one-half column category">
           <div class="img-text-container">
-<!--           <img class="u-max-full-width" src="images/maissipelto.jpg"> -->
                       <div class="box-container"></div>
 
           <div class="centered">Vilu mulle virttä virkkoi, sae saatteli runoja. </div>
           </div>
         </div>
-      </div>
-
-
-
+      </div> -->
 
 
 
